[gd_scene load_steps=5 format=3 uid="uid://bgg7b3c5oc6xi"]

[ext_resource type="Script" path="res://scripts/lower_enemy.gd" id="1_nsudp"]
[ext_resource type="Texture2D" uid="uid://d25avd7q40ne0" path="res://images/Letter_a_low.png" id="2_rroik"]
[ext_resource type="PackedScene" uid="uid://c2adget47swu4" path="res://scenes/prefabs/health.tscn" id="3_37lvp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g40aj"]
size = Vector2(34, 32)

[node name="Enemy_a" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_nsudp")
attack_range = 100.0
time_to_attack = 3.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-15, -16, 16, -16, 17, 17, -17, 17)

[node name="Sprite2D" type="Sprite2D" parent="CollisionPolygon2D"]
texture = ExtResource("2_rroik")

[node name="Proj_Position_Holder" type="Node2D" parent="."]

[node name="Proj_Position" type="Node2D" parent="Proj_Position_Holder"]
position = Vector2(0, -42)

[node name="Timer" type="Timer" parent="."]

[node name="health" parent="." instance=ExtResource("3_37lvp")]
max_health = 30

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_g40aj")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="health_changed" from="health" to="." method="_on_health_health_changed"]
[connection signal="killed" from="health" to="." method="_on_health_killed"]
